--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,7 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AddresturantsFragment"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Activities.map"
+            android:exported="false"
+            android:theme="@style/Theme.AddresturantsFragment" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -28,8 +32,8 @@
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
         -->
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+          android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD4KfDcLVjVPatpIKtrPXot024Z4UHVZQ8"/>
 
         <activity
             android:name=".Activities.MainActivity"
